# OpenGL_Engine

./: CMakeLists.txt  README.md
assets/shader/: cubeLightSource_fs.txt  cubeLightSource_vs.txt  fDirectionalLight.txt  fGeometryPass.txt  fLightPass.txt  fLightSphere.txt  fPointLights.txt  fScreenQuad.txt  fShader.txt  fShaderNormalMapping.txt  vDirectionalLight.txt  vGeometryPass.txt  vLightPass.txt  vLightSphere.txt  vScreenQuad.txt  vShaderNormalmapping.txt
engine/core/: CMakeLists.txt  main.cc  mat4.h  util.h  vec2.h  vec3.h  vec4.h
engine/render/: CMakeLists.txt  Camera.cpp  Camera.h  GLTF.cpp  GLTF.h  GraphicNode.cpp  GraphicNode.h  InputManager.h  LightingResource.cpp  LightingResource.h  Materials.cpp  Materials.h  MeshResource.cpp  MeshResource.h  ObjLoader.cpp  ShaderResource.cpp  ShaderResource.h  TextureResource.cpp  TextureResource.h  window.h
projects/myproject/: CMakeLists.txt
projects/myproject/code/: exampleapp.cc  exampleapp.h  main.cc
shader/: fShader.txt  vShader.txt
